--- a/css/main.css
+++ b/css/main.css
@@ -673,10 +673,12 @@ body {
 
 .card__btn {
   position: relative;
+  
   z-index: 3;
   width: 48px;
   height: 48px;
   background-color: var(--ui-dark-blue);
+  /* color: #eee; */
   border-radius: 50%;
   display: flex;
   align-items: center;
