удаление товара из корзины и посчёт общей суммы

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,9 @@
 *::after {
   box-sizing: border-box;
 }
-
+.none{
+  display: none;
+}
 /* Links */
 a, a:link, a:visited {
   text-decoration: none;
